descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2010-02-XX  Release 7.16.8                                     ---
----------------------------------------------------------------------

* fix rtweight bug where incorrect units were reported - Cliff Yapp
* added initial manual page documentation for rtwizard - Sean Morrison
* support for metaball conversion to polygonal format - Erik Greenwald


----------------------------------------------------------------------
--- 2010-01-04  Release 7.16.6                                     ---
----------------------------------------------------------------------

Considerable effort continues towards improving BRL-CAD's
documentation.  Janine Gettier has now converted the documentation for
approximately 200 of MGED's commands into the Docbook XML format.
Jesica Guidice has translated 4 of MGED's 16 introductory tutorials to
Spanish.  Cliff Yapp continues to work extensively with both to get
their efforts integrated so that HTML and PDF documentation are
cleanly generated.

* added dbot_dump to Archer for dumping displayed BoTs - Bob Parker
* added support to Archer for exporting view in OBJ format - Bob Parker
* new mvall command -f filename option for bulk renaming - Bob Parker
* fixed invocation of external editor for MGED commands - Cliff Yapp
* fixed BoT raytracing solidity failure on grazed edges - Keith Bowman
* increased 'rcodes' and 'edcodes' maximum line length - Sean Morrison
* increased maximum path depth supported by 'wcodes' - Sean Morrison
* extensive work on MGED Docbook man page conversions - Janine Gettier
* fixed unoriented BoT badmagic raytrace failure - Sean Morrison
* translation of mged tutorials 3 and 6 to Spanish - Jesica Giudice


----------------------------------------------------------------------